[tool.poetry]
name = "lpm-fidelity"
version = "0.0.1"
description = "Assessing fidelity of synthetic data"
license = "Apache-2.0"
authors = ["Ulli Schaechtle <ulli@mit.edu>"]
readme = "README.md"
packages = [{include = "lpm_fidelity",from = "src"}]
repository = "https://github.com/inferenceql/lpm.fidelity"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
scipy = "^1.14.1"
polars = "^1.7.1"
POT = {git = "https://github.com/PythonOT/POT.git", branch = "master"}

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
