[tool.poetry]
name = "lpm-fidelity"
version = "0.0.1"
description = "Assessing fidelity of synthetic data"
license = "Apache-2.0"
authors = ["Ulli Schaechtle <ulli@mit.edu>","Tim Burress <tim-burress@garage.co.jp>"]
readme = "README.md"
packages = [{include = "lpm_fidelity",from = "src"}]
repository = "https://github.com/inferenceql/lpm.fidelity"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
scipy = "^1.14.1"
polars = "^1.7.1"
pot = "^0.9.4"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [ "src" ]
